<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="#FFFFFF"
        android:animateLayoutChanges="true"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        tools:context=".activities.LoginActivity">

    <ImageButton
            android:layout_marginTop="@dimen/margin_16dp"
            android:padding="@dimen/margin_8dp"
            android:background="@android:color/transparent"
            android:id="@+id/imageBackArrow"
            android:layout_marginStart="@dimen/margin_8dp"
            android:src="@drawable/icon_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.core.widget.NestedScrollView
            android:fillViewport="true"
            android:layout_marginTop="@dimen/margin_24dp"
            android:animateLayoutChanges="true"
            android:layout_below="@id/imageBackArrow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
                android:id="@+id/cardLayout"
                android:nestedScrollingEnabled="true"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                app:cardUseCompatPadding="true"
                android:animateLayoutChanges="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:animateLayoutChanges="true"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:text="@string/sign_in_with"
                        android:textSize="@dimen/textsize_18sp"
                        android:fontFamily="sans-serif-medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <RadioGroup
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:id="@+id/radioGroupLoginType"
                        android:layout_marginBottom="@dimen/margin_24dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <RadioButton
                            android:id="@+id/radioEmail"
                            android:text="@string/email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <RadioButton
                            android:id="@+id/radioMobileNo"
                            android:layout_marginStart="@dimen/margin_16dp"
                            android:text="@string/mobile_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                </RadioGroup>


                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:id="@+id/textLayoutMobileNo"
                        android:layout_marginBottom="@dimen/margin_8dp"
                        app:hintAnimationEnabled="true"
                        android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            tools:text="101010101010"
                            android:hint="@string/mobile_number"
                            android:alpha=".55"
                            android:maxLength="10"
                            android:id="@+id/editTextMobileNo"
                            android:inputType="number"
                            android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:id="@+id/textLayoutEmail"
                        android:layout_marginBottom="@dimen/margin_8dp"
                        app:hintAnimationEnabled="true"
                        android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            tools:text="khelotogether@gmail.com"
                            android:hint="@string/email"
                            android:alpha=".55"
                            android:id="@+id/editTextEmail"
                            android:inputType="textEmailAddress"
                            android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:id="@+id/textLayoutPassword"
                        app:hintAnimationEnabled="true"
                        app:passwordToggleEnabled="true"
                        android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            tools:text="101010"
                            android:id="@+id/editTextPassword"
                            android:inputType="textPassword"
                            android:hint="@string/password"
                            android:alpha=".55"
                            android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                        android:id="@+id/textViewForgotPassword"
                        android:text="@string/forgot_password"
                        android:layout_gravity="end"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <Button
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/margin_24dp"
                        android:id="@+id/buttonLogin"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@android:color/white"
                        android:text="@string/sign_in"
                        android:foreground="?attr/selectableItemBackground"
                        android:textAllCaps="false"
                        android:background="@drawable/rounded_green_button"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:text="@string/or"
                        android:fontFamily="sans-serif-medium"
                        android:layout_marginTop="@dimen/margin_24dp"
                        android:layout_marginBottom="@dimen/margin_24dp"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="wrap_content"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                    <Button
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@android:color/white"
                            android:text="@string/login_with_facebook"
                            android:foreground="?attr/selectableItemBackground"
                            android:textAllCaps="false"
                            android:background="@drawable/rounded_blue_button"
                            android:layout_height="wrap_content"/>

                    <Button
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_marginStart="@dimen/margin_16dp"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@android:color/white"
                            android:text="@string/login_with_google"
                            android:foreground="?attr/selectableItemBackground"
                            android:textAllCaps="false"
                            android:background="@drawable/rounded_red_button"
                            android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_marginTop="40dp"
                        android:id="@+id/layoutSignUp"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="wrap_content">

                    <TextView
                            android:text="@string/wanna_play"
                            android:fontFamily="sans-serif-medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <TextView
                            android:text="@string/sign_up"
                            android:textStyle="bold"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?attr/selectableItemBackground"
                            android:layout_marginStart="@dimen/margin_8dp"
                            android:textColor="@color/splash_logo_light_green"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>


                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>